# siml

./: .gitignore  Cargo.toml  LICENSE  README.md  example.siml
crates/siml-fmt/: Cargo.toml
crates/siml-fmt/src/: main.rs
crates/siml-yaml/: Cargo.toml
crates/siml-yaml/src/: main.rs
include/: siml.h
libsiml/: CMakeLists.txt  Cargo.toml  dummy.c  test.c
libsiml/include/: siml.h
libsiml/src/: lib.rs
src/: builder.rs  char.rs  comment.rs  document.rs  emitter.rs  error.rs  event.rs  input_buffer.rs  lib.rs  location.rs  parser.rs  scalar.rs  scanner.rs  string.rs  token.rs  value.rs
src/api/: mod.rs
src/serialization/: de.rs  mod.rs  ser.rs  spanned.rs
tests/: serialization.rs
