[workspace]
members = ["crates/siml-fmt", "libsiml"]

[package]
name = "siml"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.0"
bitflags = "2.5.0"
itoa = { version = "1.0.11" }
libc = { version = "0.2.153", optional = true }
ryu = { version = "1.0.17" }
serde = { version = "1.0.197", optional = true, default-features = false }
thiserror = "1.0.58"

[dev-dependencies]
serde = { version = "1.0.197", features = ["derive"] }

[features]
c_api = ["dep:libc"]
